--- a/playground/apps/my-app/src/app/app.component.html
+++ b/playground/apps/my-app/src/app/app.component.html
@@ -1,1 +1,7 @@
-<h1>hello</h1>
+<h1>Welcome my-app</h1>
+
+<ul>
+    <li *ngFor="let t of todos" class="todo">{{ t.title }}</li>
+</ul>
+
+<button id="add-todo" (click)="addTodo()">Add Todo</button>
