feat: add todo service and use async pipe

--- a/playground/apps/my-app/src/app/app.component.html
+++ b/playground/apps/my-app/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>Welcome my-app</h1>
 
 <ul>
-    <li *ngFor="let t of todos" class="todo">{{ t.title }}</li>
+    <li *ngFor="let t of todos | async" class="todo">{{ t.title }}</li>
 </ul>
 
 <button id="add-todo" (click)="addTodo()">Add Todo</button>
