--- a/playground/apps/my-app/src/app/app.component.html
+++ b/playground/apps/my-app/src/app/app.component.html
@@ -1,2 +1,10 @@
-<h1>Hello</h1>
-<router-outlet></router-outlet>
+<section class="py-5">
+    <div class="container">
+        <h1 class="mt-5 bg-secondary text-center text-white py-2">Welcome</h1>
+        <div class="h-100 d-flex justify-content-around ">
+            <h3 class="badge bg-primary">Item 1</h3>
+            <h3 class="badge bg-primary">Item 2</h3>
+            <h3 class="badge bg-primary">Item 3</h3>
+        </div>
+    </div>
+</section>
