--- a/playground/apps/my-app/src/app/question-list/question-list.component.html
+++ b/playground/apps/my-app/src/app/question-list/question-list.component.html
@@ -8,16 +8,17 @@
     <div class="row">
         <ul class="question-list list-unstyled">
             <li *ngFor="let question of questions$ | async" class="mb-3">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title text-truncate">{{question.title}}</h5>
-                        <p class="card-text text-truncate">{{question.message}}</p>
+                <a routerLink="/questions/{{question.id}}" class="text-decoration-none">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title text-truncate">{{question.title}}</h5>
+                            <p class="card-text text-truncate">{{question.message}}</p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">From: {{question.creationDate | date}}</li>
+                        </ul>
                     </div>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">From: {{question.creationDate | date}}</li>
-                    </ul>
-                    <a routerLink="/detail/{{question.id}}" class="stretched-link"></a>
-                </div>
+                 </a>
             </li>
         </ul>
     </div>
