--- a/playground/apps/my-app/src/app/question-details/question-details.component.html
+++ b/playground/apps/my-app/src/app/question-details/question-details.component.html
@@ -8,7 +8,7 @@
 
     <div *ngIf="question | async; let loadedQuestion">
         <div class="row">
-            <h2 class="mb-4">Question details</h2>
+            <h2 class="mb-4" data-cy="question-details-heading">Question details</h2>
         </div>
         <div class="row">
             <div class="card">
