feat: adapt unit tests

--- a/playground/apps/my-app/src/app/app.component.html
+++ b/playground/apps/my-app/src/app/app.component.html
@@ -1,7 +1,7 @@
 <section class="py-5">
     <div class="container">
         <h1 class="my-5 bg-primary text-center text-white py-2">
-            Welcome to Staffbase Questions & Answers
+            Welcome to my Questions & Answers Tool
         </h1>
         <router-outlet></router-outlet>
     </div>
